adding magic link gereation
